@@ -14,7 +14,7 @@ my %errors = map {
 
 if (!grep { $_ } values %errors)
 {
-    # This section for Mojo-JSON-MaybeXS was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.014.
+    # This section for Mojo-JSON-MaybeXS was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.015.
     use strict;
     use warnings;
 
