@@ -8,10 +8,10 @@ If you have cpanm, you only need one line:
 
     % cpanm Mojo::JSON::MaybeXS
 
-If you are installing into a system-wide directory, you may need to pass the
-"-S" flag to cpanm, which uses sudo to install the module:
-
-    % cpanm -S Mojo::JSON::MaybeXS
+If it does not have permission to install modules to the current perl, cpanm
+will automatically set up and install to a local::lib in your home directory.
+See the local::lib documentation (https://metacpan.org/pod/local::lib) for
+details on enabling it in your environment.
 
 ## Installing with the CPAN shell
 
@@ -31,9 +31,9 @@ Then install it:
 
     % ./Build install
 
-If you are installing into a system-wide directory, you may need to run:
-
-    % sudo ./Build install
+If your perl is system-managed, you can create a local::lib in your home
+directory to install modules to. For details, see the local::lib documentation:
+https://metacpan.org/pod/local::lib
 
 ## Documentation
 
