@@ -8,16 +8,16 @@ use Mojo::JSON ();
 
 our $VERSION = '0.012';
 
-my $BINARY = JSON::MaybeXS->new(utf8 => 1, allow_nonref => 1,
+my $BINARY = JSON::MaybeXS->new(utf8 => 1, canonical => 1, allow_nonref => 1,
 	allow_unknown => 1, allow_blessed => 1, convert_blessed => 1);
-my $TEXT = JSON::MaybeXS->new(utf8 => 0, allow_nonref => 1,
+my $TEXT = JSON::MaybeXS->new(utf8 => 0, canonical => 1, allow_nonref => 1,
 	allow_unknown => 1, allow_blessed => 1, convert_blessed => 1);
 my $TRUE = JSON->true;
 my $FALSE = JSON->false;
 
 if (JSON eq 'Cpanel::JSON::XS') {
 	local $@;
-    if (eval { Cpanel::JSON::XS->VERSION('3.0112'); 1 }) {
+	if (eval { Cpanel::JSON::XS->VERSION('3.0112'); 1 }) {
 		$BINARY->stringify_infnan;
 		$TEXT->stringify_infnan;
 	}
@@ -71,13 +71,14 @@ L<Mojo::JSON> and occasionally from each other. References to the behavior of
 L<JSON::MaybeXS> below are actually describing the behavior shared among the
 modules it loads.
 
-L<JSON::MaybeXS> is used with the options C<allow_nonref>, C<allow_unknown>,
-C<allow_blessed>, and C<convert_blessed>. C<allow_nonref> allows encoding and
-decoding of bare values outside of hash/array references, since L<Mojo::JSON>
-does not prevent this, in accordance with
-L<RFC 7159|http://tools.ietf.org/html/rfc7159>. The other options prevent the
-encoder from blowing up when encountering values that cannot be represented in
-JSON to better match the behavior of L<Mojo::JSON>; in most cases, where
+L<JSON::MaybeXS> is used with the options C<canonical>, C<allow_nonref>,
+C<allow_unknown>, C<allow_blessed>, and C<convert_blessed>. C<canonical>
+enables sorting of hash keys when encoding to JSON objects as L<Mojo::JSON>
+does. C<allow_nonref> allows encoding and decoding of bare values outside of
+hash/array references, since L<Mojo::JSON> does not prevent this, in accordance
+with L<RFC 7159|http://tools.ietf.org/html/rfc7159>. The other options prevent
+the encoder from blowing up when encountering values that cannot be represented
+in JSON to better match the behavior of L<Mojo::JSON>; in most cases, where
 L<Mojo::JSON> would stringify a reference, L<JSON::MaybeXS> with these settings
 will encode it to C<null>. See below for more specifics.
 
