@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Enable canonical option for all backends to match Mojo::JSON behavior in Mojolicious 6.58+
 
 0.011     2016-06-02 14:15:24 EDT
   - escape_slash option will now be enabled if the backend is JSON::PP or Cpanel::JSON::XS >= 3.0206
